--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for WWW-DistroWatch-ReleaseInfo
 
-0.01    2015-10-04 (PERLANCAR) (unreleased)
+0.01    2015-10-04 (PERLANCAR)
 
         - First early release.
