--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for WWW-DistroWatch-ReleaseInfo
 
+0.05    2015-10-06 (PERLANCAR)
+
+	- [ux] Add completion for distribution argument.
+
+
 0.04    2015-10-06 (PERLANCAR)
 
         - Rebuild with updated data from gudangdata-distrowatch (fix encoding
