--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.06    2018-01-22 (PERLANCAR)
+
+	- [Bugfix] Update URL to https:// (otherwise the routines get empty
+	  data) [GH#1].
+
+
 0.05    2015-10-06 (PERLANCAR)
 
 	- [ux] Add completion for distribution argument.
